--- a/Tugas Besar Web Dasar (Kelompok 4)/Halaman 1/style/style information.css
+++ b/Tugas Besar Web Dasar (Kelompok 4)/Halaman 1/style/style information.css
@@ -9,8 +9,8 @@
     margin-top: 20px;
 }
 .black{
-    background-color: black;
-    color: rgb(255, 217, 0);
+    background-color: rgb(77, 77, 78);
+    color: rgb(242, 169, 0);
 }
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
 *{
@@ -39,7 +39,7 @@ body {
 }
 .sidebar header {
   font-size: 22px;
-  color: rgb(255, 217, 0);
+  color: rgb(242, 169, 0);
   line-height: 70px;
   text-align: center;
   background: rgb(0, 0, 0);
@@ -63,7 +63,7 @@ body {
 }
 ul li:hover a{
   padding-left: 50px;
-  color: rgb(255, 38, 0);
+  color: rgb(251, 140, 1);
 }
 .sidebar ul a i{
   margin-right: 16px;
@@ -93,7 +93,7 @@ label #cancel{
   left: 195px;
   top: 17px;
   font-size: 30px;
-  color: rgb(255, 217, 0);
+  color: rgb(242, 169, 0);
   padding: 4px 9px;
   transition: all .5s ease;
 }
